--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <div class="main_container">
+  <main class="main_container">
     <div class="container">
       <div class="card" id="card_1">
         <div class="card_top">
@@ -102,7 +102,7 @@
         </p>
       </div>
     </div>
-  </div>
+  </main>
 </body>
 
 </html>
